# ckb-vm

./: Cargo.toml  build.rs
definitions/: Cargo.toml
definitions/src/: lib.rs
src/: decoder.rs  error.rs  lib.rs
src/instructions/: ast.rs  register.rs
src/machine/: mod.rs  trace.rs
src/memory/: mod.rs  sparse.rs
