[package]
name = "ckb-vm"
description = "CKB's Virtual machine"
version = "0.24.0-alpha"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2021"
rust-version = "1.61.0"
build = "build.rs"
exclude = ["/benches", "/tests"]

[features]
default = ["std"]
std = ["byteorder", "scroll/std", "ckb-vm-definitions/std", "bytes/std", "serde/std", "rand/std", "scroll/std", "derive_more/std"]
# Require asm feature, generates an error if asm cannot be enabled.
asm = ["std"]
# Detect if requirements are met, and enable asm feature when we can.
detect-asm = ["std"]
enable-chaos-mode-by-default = ["ckb-vm-definitions/enable-chaos-mode-by-default"]
# Disable slow tests to run miri on CI
miri-ci = []
pprof = []

[dependencies]
byteorder = { version = "1", optional = true }
bytes = { version = "1", default-features = false }
cfg-if = "0.1"
goblin_v023 = { package = "goblin", version = "=0.2.3", default-features = false, features = ["elf64", "alloc", "elf32", "endian_fd" ] }
goblin_v040 = { package = "goblin", version = "=0.4.0", default-features = false, features = ["elf64", "alloc", "elf32", "endian_fd" ] }
scroll = { version = "0.10.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
ckb-vm-definitions = { path = "definitions", version = "=0.24.0-alpha", default-features = false }
derive_more = { git = "https://github.com/JelteF/derive_more", branch = "master", default-features = false, features = ["display"] }
rand = { version = "0.7.3", default-features = false }

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.4.0"
proptest = "0.9.1"
lazy_static = "1.4.0"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
jemallocator = "0.5.0"
jemalloc-ctl = "0.5.0"

[[bench]]
name = "bits_benchmark"
path = "benches/bits_benchmark.rs"
harness = false

[[bench]]
name = "vm_benchmark"
path = "benches/vm_benchmark.rs"
harness = false
